2000-01-23  Bruno Haible  <linuix.math.u-bordeaux.fr>

        Upgrade to readline-4.1-beta3.

1999-04-03  Bruno Haible  <linuix.math.u-bordeaux.fr>

        * doc/rluserman.texinfo: New file, derived from doc/rlman.texinfo.
        * doc/Makefile.in (MAKEINFO): Prefix with LANGUAGE=, to force English.
          (DVIPS): Change -D300 to -D600, to match current printers'
          resolution.
          (DVIOBJ): Add rluserman.dvi.
          (INFOOBJ): Add rluserman.info.
          (PSOBJ): Add rluserman.ps.
          (HTMLOBJ): Add rluserman.html.
          (HTMLTOC): Add rluserman_toc.html.
          (rluserman.dvi, rluserman.info, rluserman.ps, rluserman.html): New
          rules.

1999-03-06  Bruno Haible  <linuix.math.u-bordeaux.fr>

        Upgrade to readline-4.0.

1999-02-25  Bruno Haible  <linuix.math.u-bordeaux.fr>

        * readline.h (rl_completion_entry_function): Change type to
          `CPFunction *'.
        * complete.c (rl_completion_entry_function): Likewise.
          (gen_completion_matches): Change type of `our_func' argument.
          Remove bogus function type cast.
          (rl_complete_internal): Change type of `our_func' variable.
          Remove bogus function type casts.
          (rl_menu_complete): Likewise.

1998-10-12  Bruno Haible  <linuix.math.u-bordeaux.fr>

        * Makefile.in: Rewrite the dependency lines, one rule per target.
          (Otherwise "make -r bind.o" [GNU make] doesn't compile bind.c.)

1998-10-10  Bruno Haible  <linuix.math.u-bordeaux.fr>

        * readline.c (_emx_build_environ): Remove.
          From Kai Uwe Rommel <rommel@ars.de>.
        * emacs_keymap.c (emacs_dos_keymap): keymap for DOS.
        * keymaps.h (emacs_dos_keymap): Declare it.
        * histfile.c (history_filename): Use "!history" instead of ".history"
          on DOS.
          (read_history_range): Don't assume that the number of bytes that
          can be read from a file is the same as stat's st_size. (Not true on