@@ -1,3 +1,8 @@
+2000-03-13  Bruno Haible  <linuix.math.u-bordeaux.fr>
+
+        * input.c, parens.c: Add BeOS support.
+          Patch by Alexis Rivera Rios <ahrivera@yahoo.com>.
+
 2000-01-23  Bruno Haible  <linuix.math.u-bordeaux.fr>
 
         Upgrade to readline-4.1-beta3.
